--- a/Maven/Maven.yml
+++ b/Maven/Maven.yml
@@ -29,11 +29,11 @@ steps:
       testResultsFiles: ${{parameters.testResultsFiles}}
       publishJUnitResults: true
       goals: ${{parameters.goal}}
-    condition: eq(${{parameters.specificversion}},' ')
+    condition: eq(${{parameters.specificversion}}, ' ')
 
   - task: CopyFiles@2
     inputs:
-      contents: '**/spring-petclinic*.jar'
+      contents: ${{parameters.acrtifactpath}}
       targetFolder: $(Build.ArtifactStagingDirectory)
       
   - task: PublishBuildArtifacts@1
